Fixed pre tags not overflowing properly with a scroll bar, this caused an issue with centering in the navbar and added incorrect space on the right side.

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,8 @@ pre {
   color: var(--light-text);
   padding: 15px;
   border-radius: var(--border-radius);
+  max-width: var(--global-width);
+  overflow-x: auto;
 }
 
 blockquote {
